tests/NormalTests/paczka1/fuzzy1/24782048.err
Error in line 3: rvtbavoyla S706 8,23
Error in line 16: 3TjX A359 -1,8
Error in line 5: X04G S289 43,0
Error in line 24: S289 S289 28,52
Error in line 18: S289 S706 73,7
Error in line 13: 7TMAT1S5Cd S706 83,8
Error in line 15: WoEj S289 59,8
Error in line 35: WoEj A249 70,0
